# desunes

./: CMakeLists.txt
.github/workflows/: ci.yaml
application/: CMakeLists.txt
application/src/: control_widget.cpp  control_widget.h  file_widget.cpp  file_widget.h  info_widget.cpp  info_widget.h  keyboard_controller.cpp  keyboard_controller.h  main.cpp  rom_widget.cpp  rom_widget.h
